2011-11-28  Filip Pizlo  <fpizlo@apple.com>

        DFG non-X86 ArithDiv does speculation failure after mutating state,
        without a value recovery
        https://bugs.webkit.org/show_bug.cgi?id=73286

        Reviewed by Gavin Barraclough.

        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::compile):

2011-11-28  Filip Pizlo  <fpizlo@apple.com>

        Unreviewed build fixes for ARM.

        * assembler/MacroAssemblerARMv7.h:
        (JSC::MacroAssemblerARMv7::readCallTarget):
        * dfg/DFGSpeculativeJIT.h:
        (JSC::DFG::SpeculativeJIT::setupArgumentsWithExecState):

2011-11-20  Roland Steiner  <rolandsteiner@chromium.org>

        <style scoped>: add ENABLE(STYLE_SCOPED) flag to WebKit
        https://bugs.webkit.org/show_bug.cgi?id=72848

        Add ENABLE_STYLE_SCOPED flag.

        Reviewed by Dimitri Glazkov.

        * Configurations/FeatureDefines.xcconfig:

2011-11-28  Jon Lee  <jonlee@apple.com>

        Create skeleton framework for notifications support in WK2
        https://bugs.webkit.org/show_bug.cgi?id=73253
        <rdar://problem/10356943>

        * Configurations/FeatureDefines.xcconfig: Split out ENABLE_NOTIFICATIONS based on platform.

2011-11-28  Oliver Hunt  <oliver@apple.com>

        Fix windows build.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2011-11-28  Oliver Hunt  <oliver@apple.com>

        Fix gyp build

        * JavaScriptCore.gypi:

2011-11-28  Filip Pizlo  <fpizlo@apple.com>

        GetById should not always speculate cell
        https://bugs.webkit.org/show_bug.cgi?id=73181

        Reviewed by Gavin Barraclough.
        
        GetById will now speculate cell if the predictions of the base are cell.
        Otherwise it will do like the old JIT (and like the old non-speculative
        DFG JIT): if not cell, go straight to slow-path but otherwise don't OSR
        out. This is a 1% speed-up on SunSpider.

        * dfg/DFGAbstractState.cpp: