@@ -164,7 +164,6 @@ public:
 
 #ifndef NDEBUG
     // Add a debug call. This call has no effect on JIT code execution state.
-#if CPU(X86_64) || CPU(X86)
     void debugCall(V_DFGDebugOperation_EP function, void* argument)
     {
         EncodedJSValue* buffer = static_cast<EncodedJSValue*>(m_globalData->scratchBufferForSize(sizeof(EncodedJSValue) * (GPRInfo::numberOfRegisters + FPRInfo::numberOfRegisters)));
@@ -175,7 +174,7 @@ public:
             move(TrustedImmPtr(buffer + GPRInfo::numberOfRegisters + i), GPRInfo::regT0);
             storeDouble(FPRInfo::toRegister(i), GPRInfo::regT0);
         }
-#if CPU(X86_64)
+#if CPU(X86_64) || CPU(ARM_THUMB2)
         move(TrustedImmPtr(argument), GPRInfo::argumentGPR1);
         move(GPRInfo::callFrameRegister, GPRInfo::argumentGPR0);
 #elif CPU(X86)
@@ -193,15 +192,6 @@ public:
         for (unsigned i = 0; i < GPRInfo::numberOfRegisters; ++i)
             loadPtr(buffer + i, GPRInfo::toRegister(i));
     }
-#else
-    void debugCall(V_DFGDebugOperation_EP function, void* argument) NO_RETURN_DUE_TO_ASSERT
-    {
-        // debugCall not supported on this platform.
-        UNUSED_PARAM(function);
-        UNUSED_PARAM(argument);
-        ASSERT_NOT_REACHED();
-    }
-#endif
 #endif
 
     // These methods JIT generate dynamic, debug-only checks - akin to ASSERTs.
